<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".fragments.CrearFacturaFragment">

        <!-- TÍTULO -->
        <TextView
            android:id="@+id/tituloFormulario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Formulario de Factura"
            android:textColor="@color/bottom_nav_text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <!-- CONTENEDOR DE FORMULARIO -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_fragment2"
            android:padding="16dp"
            android:layout_marginTop="20dp">

            <!-- Tus campos (nombre, documento, etc.) aquí -->
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/nombre_completo"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/idNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_completo"
                android:inputType="text"
                android:textSize="14sp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/n_mero_de_documento"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/idDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/n_mero_de_documento"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingVertical="12dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/n_mero_de_tel_fono"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/idTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/n_mero_de_tel_fono"
                android:inputType="number|phone"
                android:minHeight="48dp"
                android:paddingVertical="12dp"
                android:textSize="14sp" />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/tratamiento"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <AutoCompleteTextView
                android:id="@+id/selectorTratamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_select"
                android:drawableEnd="@drawable/ic_dropdown"
                android:dropDownHeight="wrap_content"
                android:dropDownVerticalOffset="4dp"
                android:hint="Seleccione un tratamiento"
                android:inputType="none"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/valor_de_la_cita"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/inputValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingVertical="12dp"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/factura_electr_nica"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <AutoCompleteTextView
                android:id="@+id/selectorFE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_select"
                android:drawableEnd="@drawable/ic_dropdown"
                android:dropDownHeight="wrap_content"
                android:dropDownVerticalOffset="4dp"
                android:hint="Seleccione una opción"
                android:inputType="none"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="14sp"/>



            <!-- Botones -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/botonAzul"
                    android:text="Guardar"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/botonRojo"
                    android:text="Cancelar"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
